--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,6 +5,7 @@
 @import "header-bottom";
 @import "banner";
 @import "product";
+@import "cart";
 @import "category";
 @import "card-box";
 @import "advantages";
