--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -223,7 +223,7 @@
                     font-size: 13px;
                     line-height: 16px;
                     color: $color-dark;
-                    padding: 0 17px;
+                    padding: 10px 17px;
                     margin-top: 23px;
                     resize: none;
                 }
