--- a/css/style.css
+++ b/css/style.css
@@ -1173,7 +1173,7 @@ ul li {
   font-size: 13px;
   line-height: 16px;
   color: #222222;
-  padding: 0 17px;
+  padding: 10px 17px;
   margin-top: 23px;
   resize: none;
 }
