--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -218,6 +218,7 @@
                 }
                 #quote {
                     display: none;
+                    width: 100%;
                     border: 1px solid #a4a4a4;
                     font-weight: 300;
                     font-size: 13px;
