--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -169,6 +169,7 @@
                 border: 1px solid #ff6a6a;
                 color: $color-pink-button;
                 cursor: pointer;
+                transition: 0.3s;
                 svg {
                     display: block;
                     margin-right: 23px;
