--- a/scss/_generate.scss
+++ b/scss/_generate.scss
@@ -22,6 +22,7 @@ $color-bg-product: #f7f7f7;
 $color-product-desc: #5e5e5e;
 $color-cart-card: #575757;
 $color-grey-cart: #4a4a4a;
+$color-reg-pholder: #b1b1b1;
 
 @mixin flex($jc, $ai) {
     display: flex;
