--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,7 @@
 @import "banner";
 @import "product";
 @import "cart";
+@import "registration";
 @import "category";
 @import "card-box";
 @import "advantages";
