--- a/css/style.css
+++ b/css/style.css
@@ -1291,6 +1291,227 @@ ul li {
   border: none;
 }
 
+.registration {
+  width: 100%;
+}
+
+.registration__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-top: 64px;
+  margin-bottom: 96px;
+}
+
+.registration__container__form {
+  max-width: 360px;
+  width: 100%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+
+.registration__container__form input {
+  display: block;
+  width: 100%;
+  height: 45px;
+  border: 1px solid #a4a4a4;
+  padding: 0 17px;
+  margin-top: 20px;
+}
+
+.registration__container__form input::-webkit-input-placeholder {
+  color: #b1b1b1;
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.registration__container__form input:-ms-input-placeholder {
+  color: #b1b1b1;
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.registration__container__form input::-ms-input-placeholder {
+  color: #b1b1b1;
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.registration__container__form input::placeholder {
+  color: #b1b1b1;
+  text-transform: capitalize;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+}
+
+.registration__container__form legend {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+}
+
+.registration__container__form__name {
+  margin-bottom: 33px;
+}
+
+.registration__container__form__name__gender {
+  margin-top: 31px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: initial;
+      -ms-flex-pack: initial;
+          justify-content: initial;
+  -webkit-box-align: initial;
+      -ms-flex-align: initial;
+          align-items: initial;
+}
+
+.registration__container__form__name__gender #male,
+.registration__container__form__name__gender #female {
+  width: initial;
+  height: initial;
+  margin: 0;
+  cursor: pointer;
+}
+
+.registration__container__form__name__gender .g-label {
+  display: block;
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 13px;
+  color: #000000;
+  padding-left: 10px;
+  margin-right: 20px;
+  cursor: pointer;
+}
+
+.registration__container__form__login {
+  margin-bottom: 39px;
+}
+
+.registration__container__form__login__txt {
+  margin-top: 15px;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 16px;
+  color: #b1b1b1;
+}
+
+.registration__container__form__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 167px;
+  width: 100%;
+  height: 50px;
+  color: #ffffff;
+  background-color: #f16d7f;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  text-transform: uppercase;
+  cursor: pointer;
+  -webkit-transition: background-color 0.3s ease, border-radius 0.5s ease, -webkit-transform 0.3s ease;
+  transition: background-color 0.3s ease, border-radius 0.5s ease, -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease, border-radius 0.5s ease;
+  transition: transform 0.3s ease, background-color 0.3s ease, border-radius 0.5s ease, -webkit-transform 0.3s ease;
+}
+
+.registration__container__form__btn svg {
+  display: block;
+  fill: #ffffff;
+  margin-left: 20px;
+}
+
+.registration__container__form__btn:hover {
+  background-color: #ffffff;
+  border: 1px solid #ef5b70;
+  color: #f16d7f;
+  -webkit-transform: scale(1.25);
+          transform: scale(1.25);
+  border-radius: 10px;
+}
+
+.registration__container__form__btn:hover svg {
+  fill: #f16d7f;
+}
+
+.registration__container__form__btn:active {
+  color: #ffffff;
+  background-color: #f16d7f;
+  border: none;
+}
+
+.registration__container__form__btn:active svg {
+  fill: #ffffff;
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition: -webkit-transform 0.3s ease;
+  transition: -webkit-transform 0.3s ease;
+  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+.registration__container__loyalty,
+.registration__container h2 {
+  max-width: 652px;
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 29px;
+  color: #000000;
+}
+
+.registration__container__loyalty__txt {
+  margin: 22px 0;
+}
+
+.registration__container__loyalty__list__item {
+  margin-bottom: 16px;
+  padding-left: 43px;
+  position: relative;
+}
+
+.registration__container__loyalty__list__item:last-child {
+  margin-bottom: 0;
+}
+
+.registration__container__loyalty__list__item::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background: url(/img/list-marker.svg);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 16px;
+  top: 7px;
+  left: 0;
+}
+
+.registration__container h2 {
+  text-transform: uppercase;
+}
+
 .category-box-wrapper {
   padding-top: 65px;
   margin: 0 -15px;
