--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -112,6 +112,7 @@
             color: $color-text-black;
         }
         &__loyalty {
+            margin-left: 22px;
             &__txt {
                 margin: 22px 0;
             }
