--- a/css/style.css
+++ b/css/style.css
@@ -859,7 +859,7 @@ ul li {
 
 .cart__container__productbox {
   width: 100%;
-  margin-right: 128px;
+  margin-right: 25px;
 }
 
 .cart__container__productbox__products {
@@ -876,6 +876,7 @@ ul li {
   -webkit-box-align: initial;
       -ms-flex-align: initial;
           align-items: initial;
+  max-width: 652px;
   width: 100%;
   max-height: 306px;
   overflow: hidden;
@@ -898,6 +899,7 @@ ul li {
 .cart__container__productbox__products__card__img img {
   display: block;
   max-width: 100%;
+  height: 100%;
 }
 
 .cart__container__productbox__products__card__desc {
