--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -6,11 +6,12 @@
         margin-bottom: 128px;
         &__productbox {
             width: 100%;
-            margin-right: 128px;
+            margin-right: 25px;
             &__products {
                 margin-bottom: 72px;
                 &__card {
                     @include flex(initial, initial);
+                    max-width: 652px;
                     width: 100%;
                     max-height: 306px;
                     overflow: hidden;
@@ -27,6 +28,7 @@
                         img {
                             display: block;
                             max-width: 100%;
+                            height: 100%;
                         }
                     }
                     &__desc {
