--- a/css/style.css
+++ b/css/style.css
@@ -963,6 +963,7 @@ ul li {
   width: 18px;
   height: 18px;
   cursor: pointer;
+  margin-left: 5px;
 }
 
 .cart__container__productbox__products__card__desc .delete-card::before {
@@ -1054,7 +1055,7 @@ ul li {
 }
 
 .cart__container__formbox {
-  width: 360px;
+  max-width: 360px;
 }
 
 .cart__container__formbox__adressbox {
