--- a/scss/_cart.scss
+++ b/scss/_cart.scss
@@ -76,6 +76,7 @@
                             width: 18px;
                             height: 18px;
                             cursor: pointer;
+                            margin-left: 5px;
                             &::before {
                                 content: "";
                                 display: block;
@@ -146,7 +147,7 @@
             }
         }
         &__formbox {
-            width: 360px;
+            max-width: 360px;
             &__adressbox {
                 width: 100%;
                 min-height: 272px;
