--- a/scss/_registration.scss
+++ b/scss/_registration.scss
@@ -89,6 +89,18 @@
                     border-radius: 10px;
                     svg {
                         fill: $color-pink;
+                        @keyframes anim {
+                            from {
+                                margin-left: 20px;
+                            }
+                            50% {
+                                margin-left: 30px;
+                            }
+                            to {
+                                margin-left: 20px;
+                            }
+                        }
+                        animation: anim 0.5s infinite ease-in-out;
                     }
                 }
                 &:active {
@@ -98,7 +110,7 @@
                     svg {
                         fill: $color-white;
                         transform: rotate(360deg);
-                        transition: transform 0.3s ease;
+                        transition: transform 0.3s ease-in-out;
                     }
                 }
             }
