--- a/scss/_card-box.scss
+++ b/scss/_card-box.scss
@@ -14,17 +14,17 @@
         font-size: 14px;
         line-height: 17px;
         color: #9f9f9f;
+        text-align: center;
     }
     &-for-card {
         margin: 33px -15px;
-        @include flex(space-between, flex-start);
+        @include flex(center, flex-start);
         flex-wrap: wrap;
         &-item {
             margin: 15px;
             .card {
                 display: block;
-                width: 360px;
-                min-height: 580px;
+                max-width: 360px;
                 background: $color-card;
                 position: relative;
                 &-view {
@@ -47,7 +47,7 @@
                     max-width: 100%;
                 }
                 &-content {
-                    margin: 25px 28px 20px 16px;
+                    padding: 25px 28px 20px 16px;
                     &-title {
                         font-weight: normal;
                         font-size: 13px;
@@ -214,13 +214,11 @@
                 #category:checked ~ .filter-list-item-button {
                     color: $color-pink-active;
                 }
-
                 #category,
                 #brand,
                 #designer {
                     display: none;
                 }
-
                 &-item:last-child {
                     margin-bottom: 0;
                 }
@@ -247,7 +245,6 @@
                     top: 0;
                     background: $color-pink-active;
                 }
-
                 &-subsection {
                     margin: 24px 0;
                     .subsection-item {
@@ -324,6 +321,7 @@
         margin-right: 0;
     }
 }
+
 #size-list {
     display: none;
 }
@@ -388,12 +386,14 @@
     box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
     z-index: 4;
 }
+
 .card-box-container-catalog {
     padding-top: 0;
     .card-box-container-for-card-catalog {
         margin-top: 0;
     }
 }
+
 .pages {
     display: inline-block;
     border: 1px solid #ebebeb;
@@ -418,6 +418,7 @@
 }
 
 /*Product*/
+
 .card-box-product {
     padding-top: 10px;
     &-for-card {
