--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -1,4 +1,4 @@
-@media (max-width: 900px) {
+@media only all and (max-width: 900px) {
     .banner-container-info {
         margin: 290px 0 0 0;
     }
@@ -12,7 +12,7 @@
     }
 }
 
-@media (max-width: 768px) {
+@media only all and (max-width: 768px) {
     .container {
         max-width: 766px;
         width: 100%;
@@ -71,7 +71,7 @@
     }
 }
 
-@media (max-width: 600px) {
+@media only all and (max-width: 600px) {
     .top-menu-container-right-list-item {
         margin-right: 0;
     }
@@ -99,7 +99,7 @@
     }
 }
 
-@media (max-width: 390px) {
+@media only all and (max-width: 390px) {
     .banner {
         &-container {
             background-size: cover;
@@ -112,7 +112,7 @@
     }
 }
 
-@media (max-width: 375px) {
+@media only all and (max-width: 375px) {
     .container {
         max-width: 363px;
     }
